--- a/pages/popup/package.json
+++ b/pages/popup/package.json
@@ -18,10 +18,13 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@extension/content-runtime-script": "workspace:*",
     "@extension/shared": "workspace:*",
     "@extension/storage": "workspace:*",
-    "@extension/content-runtime-script": "workspace:*",
-    "@types/node": "^20.14.10"
+    "@nextui-org/react": "^2.4.6",
+    "@types/node": "^20.14.10",
+    "framer-motion": "^11.3.31",
+    "tailwindcss": "^3.4.6"
   },
   "devDependencies": {
     "@extension/tailwindcss-config": "workspace:*",
